--- a/ppij_web_aplikacija/Views/Instrukcije/Kategorija.cshtml
+++ b/ppij_web_aplikacija/Views/Instrukcije/Kategorija.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <h3>Biranje kategorija</h3>
+    <h3>Biranje kategorije</h3>
     <hr />
     @using (Html.BeginForm("Index"))
     {
@@ -22,8 +22,7 @@
         {
             <div>
                 @opis.Kategorija.naziv_kategorija -
-                broj instrukcija: @opis.BrojInstrukcija -
-                @Html.RouteLink("Odaberi", "Predmeti", new { kategorija_id = opis.Kategorija.ID_kategorija})
+                @Html.RouteLink("Odaberi", "Ustanove", new { kategorija_id = opis.Kategorija.ID_kategorija})
             </div>
         }
     </p>
