--- a/ppij_web_aplikacija/Views/Profil/Index.cshtml
+++ b/ppij_web_aplikacija/Views/Profil/Index.cshtml
@@ -519,7 +519,7 @@
                         var rows = " ";
                         var col = " ";
                         for(var i = 0; i <= 23; i++){
-                            rows = rows + '<tr><td><div class="redrazmak">'+i+'h    '+'</div></td>';
+                            rows = rows + '<tr><td><div class="redrazmak"><b>'+i+'h    '+'</b></div></td>';
                             col = " ";
                             for (var j = 1; j <= 7; j++) {
                                 col = col + '<td><div class="redrazmak ">'
