--- a/ppij_web_aplikacija/Views/Profil/Index.cshtml
+++ b/ppij_web_aplikacija/Views/Profil/Index.cshtml
@@ -30,8 +30,8 @@
                         <div class=" tabbable " style="margin-top:-40px" role="tablist">
                             <ul class="nav nav-tabs" id="myTabDogovoreno">
                                 <!--Popis subtabova-->
-                                <li role="presentation" class="active"><a href="#tab1_1" aria-controls="tab1_1" role="tab" data-toggle="tab">Moje dogovorene instrukcije kao klijent</a></li>
-                                <li role="presentation"><a href="#tab1_2" aria-controls="tab1_2" role="tab" data-toggle="tab">Moje dogovorene instrukcije kao instruktor</a></li>
+                                <li role="presentation" class="active"><a href="#tab11" aria-controls="tab11" role="tab" data-toggle="tab">Moje dogovorene instrukcije kao klijent</a></li>
+                                <li role="presentation"><a href="#tab12" aria-controls="tab12" role="tab" data-toggle="tab">Moje dogovorene instrukcije kao instruktor</a></li>
                             </ul>
 
 
@@ -39,7 +39,7 @@
                             <div class="tab-content">
 
                                 <!--tablica kao klijent-->
-                                <div class="tab-pane active top-buffer" role="tabpanel" id="tab1_1">
+                                <div class="tab-pane active top-buffer" role="tabpanel" id="tab11">
 
                                     @using (Html.BeginForm())
                                     {
@@ -49,7 +49,7 @@
                                                     <div>
                                                         <h3>Dogovorene instrukcije kao klijent</h3>
                                                         <div class="col-md-2 mali-razmak-gore prihvati-lijevo">
-                                                            <input type="submit" class="btn btn-default " style="font-weight: bold;" value="Prihvati izmjene &raquo;" onclick="dodajindex(1);" /> <br />
+                                                            <input type="submit" class="btn btn-default " style="font-weight: bold;" value="Prihvati izmjene &raquo;" onclick="dodajindex(11);" /> <br />
                                                         </div>
 
 
@@ -149,9 +149,9 @@
 
                                                     </div>
                                                 </div>
-                                                @Html.HiddenFor(model => model.trenutniTab, new { id = "trenutniTab1" })
+                                                @Html.HiddenFor(model => model.trenutniTab, new { id = "trenutniTab11" })
                                                 <div class="col-md-2 mali-razmak-gore prihvati-lijevo">
-                                                    <input onclick="dodajindex(1);" type="submit" class="btn btn-default " style="font-weight: bold;" value="Prihvati izmjene &raquo;" /><br />
+                                                    <input onclick="dodajindex(11);" type="submit" class="btn btn-default " style="font-weight: bold;" value="Prihvati izmjene &raquo;" /><br />
                                                 </div>
                                             </form>
                                         </fieldset>
@@ -160,7 +160,7 @@
                                 </div>
 
                                 <!--tablica kao instruktor-->
-                                <div class="tab-pane top-buffer" role="tabpanel" id="tab1_2">
+                                <div class="tab-pane top-buffer" role="tabpanel" id="tab12">
                                     @using (Html.BeginForm())
                                     {
                                         <fieldset>
@@ -171,7 +171,7 @@
 
                                                         <h3>Dogovorene instrukcije kao instruktor</h3>
                                                         <div class="col-md-2 mali-razmak-gore prihvati-lijevo">
-                                                            <input type="submit" class="btn btn-default" style="font-weight: bold;" value="Prihvati izmjene &raquo;" onclick="dodajindex(1);" /> <br />
+                                                            <input type="submit" class="btn btn-default" style="font-weight: bold;" value="Prihvati izmjene &raquo;" onclick="dodajindex(12);" /> <br />
                                                         </div>
 
 
@@ -269,9 +269,9 @@
 
                                                     </div>
                                                 </div>
-                                                @Html.HiddenFor(model => model.trenutniTab, new { id = "trenutniTab1" })
+                                                @Html.HiddenFor(model => model.trenutniTab, new { id = "trenutniTab12" })
                                                 <div class="col-md-2 mali-razmak-gore prihvati-lijevo">
-                                                    <input onclick="dodajindex(1);" type="submit" class="btn btn-default " style="font-weight: bold;" value="Prihvati izmjene &raquo;" /><br />
+                                                    <input onclick="dodajindex(12);" type="submit" class="btn btn-default " style="font-weight: bold;" value="Prihvati izmjene &raquo;" /><br />
                                                 </div>
                                             </form>
                                         </fieldset>
@@ -299,14 +299,14 @@
                             <div class=" tabbable " style="margin-top:-40px" role="tablist">
                                 <ul class="nav nav-tabs" id="myTabTermini">
                                     <!--Popis subtabova-->
-                                    <li role="presentation" class="active"><a href="#tab2_1" aria-controls="tab2_1" role="tab" data-toggle="tab">Moji predmeti</a></li>
-                                    <li role="presentation"><a href="#tab2_2" aria-controls="tab2_2" role="tab" data-toggle="tab">Moji termini</a></li>
+                                    <li role="presentation" class="active"><a href="#tab21" aria-controls="tab21" role="tab" data-toggle="tab">Moji predmeti</a></li>
+                                    <li role="presentation"><a href="#tab22" aria-controls="tab22" role="tab" data-toggle="tab">Moji termini</a></li>
                                 </ul>
 
 
                                 <div class="tab-content">
 
-                                    <div class="tab-pane active top-buffer" role="tabpanel" id="tab2_1">
+                                    <div class="tab-pane active top-buffer" role="tabpanel" id="tab21">
                                         @using (Html.BeginForm())
                                         {
                                             <fieldset>
@@ -314,7 +314,7 @@
                                                     <h4>Popis Kategorija</h4>
                                                     @for (var k = 0; k < Model.mojeInstrukcije.popis_kategorija.Count; k++)
                                                     {
-                                                        @Html.HiddenFor(model => model.trenutniTab, new { id = "trenutniTab2" })
+                                                        @Html.HiddenFor(model => model.trenutniTab, new { id = "trenutniTab21" })
                                                         <!--<dl class="dropdown">
                             <dt >
                                 <a href="#">-->
@@ -341,7 +341,7 @@
                             </dl>-->
                                                     }
                                                     <div class="col-md-2 mali-razmak-gore">
-                                                        <input onclick="addterminmodel(2);" type="submit" class="btn btn-default" value="Promjeni &raquo;" /> <br />
+                                                        <input onclick="addterminmodel(21);" type="submit" class="btn btn-default" value="Promjeni &raquo;" /> <br />
                                                     </div>
                                                 </form>
                                             </fieldset>
@@ -350,12 +350,15 @@
 
 
 
-                                    <div class="tab-pane top-buffer" role="tabpanel" id="tab2_2">
+                                    <div class="tab-pane top-buffer" role="tabpanel" id="tab22">
                                         @using (Html.BeginForm())
                                         {
                                             <fieldset>
                                                 <form class="form-horizontal " method="post">
                                                     <h4>Popis termina</h4>
+                                                    <div class="col-md-2 mali-razmak-gore">
+                                                        <input onclick="addterminmodel(22);" type="submit" class="btn btn-default prihvati-lijevo" value="Promjeni &raquo;" /> <br />
+                                                    </div>
                                                     <div style="width:800px;">
                                                         <table class="table-bordered table table-striped header-fixed">
                                                             <thead>
@@ -374,10 +377,10 @@
                                                         </table>
                                                     </div>
                                                     @Html.HiddenFor(model => model.mojeInstrukcije.mojiTermini, new { id = "hiddenstateid" })
-                                                    @Html.HiddenFor(model => model.trenutniTab, new { id = "trenutniTab2" })
+                                                    @Html.HiddenFor(model => model.trenutniTab, new { id = "trenutniTab22" })
 
                                                     <div class="col-md-2 mali-razmak-gore">
-                                                        <input onclick="addterminmodel(2);" type="submit" class="btn btn-default" value="Promjeni &raquo;" /> <br />
+                                                        <input onclick="addterminmodel(22);" type="submit" class="btn btn-default prihvati-lijevo" value="Promjeni &raquo;" /> <br />
                                                     </div>
                                                 </form>
                                             </fieldset>
@@ -530,13 +533,6 @@
 
 
 
-                    $(document).ready(function () {
-                        activaTab('tab' + @Html.Raw(Model.trenutniTab) );
-                    });
-                    function activaTab(tab) {
-                        $('#myTab a[href="#' + tab + '"]').tab('show');
-                    };
-
                 </script>
 
                 <div id="test123">
@@ -573,7 +569,7 @@
                     function dodajindex(id){
                         $('#trenutniTab' +id).val(id);
                     }
-                    
+
 
                     //tekst termina: Slobodno/Zauzeto
                     function oznaciTermine(){
@@ -641,8 +637,34 @@
                         dodajindex(id);
                         $("#hiddenstateid").val(dodanitermini);
                     }
+
+
+                    //pocetni tab
+                    $(document).ready(function () {
+                        var id=@Html.Raw(Model.trenutniTab);
+                        if(id == "11" || id == "12"){
+                            activaTab('tab' + 1);
+                            activaSubTab1('tab' + "id");
+                        }
+                        else if(id == "21" || id == "22"){
+                            activaTab('tab' + 2);
+                            activaSubTab2('tab' + id);
+                        }
+                        else{
+                            activaTab('tab' + id);
+                        }
+                    });
+                    function activaTab(tab) {
+                        $('#myTab a[href="#' + tab + '"]').tab('show');
+                    };
+                    function activaSubTab1(tab) {
+                        $('#myTabDogovoreno a[href="#' + tab + '"]').tab('show');
+                    };
+                    function activaSubTab2(tab) {
+                        $('#myTabTermini a[href="#' + tab + '"]').tab('show');
+                    };
+
                 </script>
-                <!--'<input id="d' + j + '' + i + '" type="checkbox" name="lists" /><label for="lists">Travel</label>'  '<button class="btn-default" >Gumb</button>'-->
 
 
             </div>
