--- a/ppij_web_aplikacija/Views/Profil/Index.cshtml
+++ b/ppij_web_aplikacija/Views/Profil/Index.cshtml
@@ -28,7 +28,7 @@
                     <div class="tab-pane active top-buffer" role="tabpanel" id="tab1">
 
                         <div class=" tabbable " style="margin-top:-40px" role="tablist">
-                            <ul class="nav nav-tabs" id="myTabDogovoreno">
+                            <ul class="nav nav-tabs subtabs" id="myTabDogovoreno">
                                 <!--Popis subtabova-->
                                 <li role="presentation" class="active"><a href="#tab11" aria-controls="tab11" role="tab" data-toggle="tab">Moje dogovorene instrukcije kao klijent</a></li>
                                 <li role="presentation"><a href="#tab12" aria-controls="tab12" role="tab" data-toggle="tab">Moje dogovorene instrukcije kao instruktor</a></li>
@@ -297,7 +297,7 @@
                             
                             
                             <div class=" tabbable " style="margin-top:-40px" role="tablist">
-                                <ul class="nav nav-tabs" id="myTabTermini">
+                                <ul class="nav nav-tabs subtabs" id="myTabTermini">
                                     <!--Popis subtabova-->
                                     <li role="presentation" class="active"><a href="#tab21" aria-controls="tab21" role="tab" data-toggle="tab">Moji predmeti</a></li>
                                     <li role="presentation"><a href="#tab22" aria-controls="tab22" role="tab" data-toggle="tab">Moji termini</a></li>
