--- a/ppij_web_aplikacija/Views/Instrukcije/Kategorija.cshtml
+++ b/ppij_web_aplikacija/Views/Instrukcije/Kategorija.cshtml
@@ -1,4 +1,4 @@
-﻿@model ppij_web_aplikacija.Models.KategorijaModel
+﻿@model ppij_web_aplikacija.Models.Instrukcije.KategorijaModel
 
 <!DOCTYPE html>
 <html>
