--- a/ppij_web_aplikacija/Views/Instrukcije/Predmet.cshtml
+++ b/ppij_web_aplikacija/Views/Instrukcije/Predmet.cshtml
@@ -1,4 +1,4 @@
-﻿@model ppij_web_aplikacija.Models.PredmetModel
+﻿@model ppij_web_aplikacija.Models.Instrukcije.PredmetModel
 
 <!DOCTYPE html>
 <html>
