--- a/ppij_web_aplikacija/Views/Instrukcije/Ustanova.cshtml
+++ b/ppij_web_aplikacija/Views/Instrukcije/Ustanova.cshtml
@@ -1,4 +1,4 @@
-﻿@model ppij_web_aplikacija.Models.UstanovaModel
+﻿@model ppij_web_aplikacija.Models.Instrukcije.UstanovaModel
 
 <!DOCTYPE html>
 <html>
