--- a/ppij_web_aplikacija/Views/Shared/_Layout.cshtml
+++ b/ppij_web_aplikacija/Views/Shared/_Layout.cshtml
@@ -26,9 +26,38 @@
                 </ul>
                 <ul class="nav navbar-right navbar-nav">
                     @if (Request.IsAuthenticated) {
+                        <li class="navbar-right">
+                            <a href="/Profil" id="notifications">Obavijesti: (-1)</a>
+                            <script type="text/javascript">
+                                $(document).ready(nots());
+                                function nots() {
+                                    $.ajax({
+                                        url: '/Profil/notification',
+                                        type: 'GET',
+                                        dataType: 'text',
+                                        async: false,
+                                        success: function (data) {
+                                            var jsonz = JSON.parse(data);
+                                            var zbroj = jsonz.klijent + jsonz.instruktor;
+                                            if (zbroj == '0') {
+                                                $('#notifications').html('Obavijesti: (' + zbroj + ')');
+                                            }
+                                            else {
+                                                $('#notifications').html('Obavijesti: <b style="color:red;">(' + zbroj + ')</b>');
+                                            }
+                                        },
+                                        complete: function () {
+                                            setTimeout(worker, 5000);
+                                        }
+                                    });
+                                };
+                            </script>
+                        </li>
                         <li class="navbar-right">@Html.ActionLink(User.Identity.Name, "Index", "Profil", new { area = "" }, null)</li>
                         <li class="navbar-right">@Html.ActionLink("Logout", "Logout", "Login", new { area = "" }, null)</li>
-                    } else {
+                    }
+                    else
+                    {
                         <li class="navbar-right">@Html.ActionLink("Login", "Index", "Login", new { area = "" }, null)</li>
                         <li class="navbar-right">@Html.ActionLink("Registracija", "Registracija", "Login", new { area = "" }, null)</li>
                     }
@@ -47,5 +76,6 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+
 </body>
 </html>
