--- a/ppij_web_aplikacija/Views/Instrukcije/Instrukcija.cshtml
+++ b/ppij_web_aplikacija/Views/Instrukcije/Instrukcija.cshtml
@@ -10,26 +10,48 @@
     <hr />
     @using (Html.BeginForm("Index"))
     {
-        <div>
-            @Html.LabelFor(m => Model.Ime)
-            @Html.TextBoxFor(m => Model.Ime)
+        <div class="form-group">
+            @Html.LabelFor(model => model.Datum)
+            @Html.EditorFor(model => model.Datum, new { htmlAttributes = new { id = "date" } })
         </div>
-        <div>
-            @Html.LabelFor(m => Model.Prezime)
-            @Html.TextBoxFor(m => Model.Prezime)
-        </div>
-        <div>
-            @Html.LabelFor(m => Model.OdabraniDanID)
-            @Html.DropDownListFor(m => Model.OdabraniDanID, Model.Dani)
-        </div>
-        <div>
+        <div class="form-group">
             @Html.LabelFor(m => m.OdabraniTerminID)
             @Html.DropDownListFor(m => Model.OdabraniTerminID, Model.Termini)
         </div>
-        <div>
+        <div class="form-group">
             @Html.LabelFor(m => m.OdabranoTrajanjeID)
             @Html.DropDownListFor(m => Model.OdabranoTrajanjeID, Model.Trajanja)
+        </div>
+        <hr />
+        <div class="form-group">
+            Tražilica:
+            <div class="form-group">
+                @Html.LabelFor(m => Model.Ime)
+                @Html.TextBoxFor(m => Model.Ime)
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => Model.Prezime)
+                @Html.TextBoxFor(m => Model.Prezime)
+            </div>
         </div>
     }
 </body>
 </html>
+
+@section Scripts {
+
+    @Scripts.Render("~/bundles/jqueryui")
+    @Styles.Render("~/Content/cssjqryUi")
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#date').datepicker({
+                dateFormat: "dd/MM/yy",
+                changeMonth: true,
+                changeYear: true,
+                yearRange: "-60:+0"
+            });
+
+        });
+    </script>
+}
