--- a/ppij_web_aplikacija/Views/Instrukcije/Instrukcija.cshtml
+++ b/ppij_web_aplikacija/Views/Instrukcije/Instrukcija.cshtml
@@ -23,44 +23,51 @@
             @Html.DropDownListFor(m => Model.OdabranoTrajanjeID, Model.Trajanja)
         </div>
         <hr />
+        <p>Ovo su samo test podaci</p>
         <table id="instrukcije" class="tablesorter">
             <thead>
                 <tr>
-                    <th>Last Name</th>
-                    <th>First Name</th>
-                    <th>Email</th>
-                    <th>Due</th>
-                    <th>Web Site</th>
+                    <th>Ime</th>
+                    <th>Prezime</th>
+                    <th>Ocjena</th>
+                    <th>Cijena (KN)</th>
+                    <th>Broj instrukcija</th>
+                    <th>Lokacija</th>
+                    <th>Status</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>Smith</td>
-                    <td>John</td>
-                    <td>jsmith@gmail.com</td>
-                    <td>$50.00</td>
-                    <td>http://www.jsmith.com</td>
+                    <td>Ilija</td>
+                    <td>Hromski</td>
+                    <td>3.47</td>
+                    <td>200</td>
+                    <td>7</td>
+                    <td>Zagreb</td>
                 </tr>
                 <tr>
-                    <td>Bach</td>
-                    <td>Frank</td>
-                    <td>fbach@yahoo.com</td>
-                    <td>$50.00</td>
-                    <td>http://www.frank.com</td>
+                    <td>Habib</td>
+                    <td>Seljdžić</td>
+                    <td>1.31</td>
+                    <td>100</td>
+                    <td>3</td>
+                    <td>Turkmenistan</td>
                 </tr>
                 <tr>
-                    <td>Doe</td>
-                    <td>Jason</td>
-                    <td>jdoe@hotmail.com</td>
-                    <td>$100.00</td>
-                    <td>http://www.jdoe.com</td>
+                    <td>Miroslav</td>
+                    <td>Glavić</td>
+                    <td>4.26</td>
+                    <td>200</td>
+                    <td>144</td>
+                    <td>Krapina</td>
                 </tr>
                 <tr>
-                    <td>Conway</td>
-                    <td>Tim</td>
-                    <td>tconway@earthlink.net</td>
-                    <td>$50.00</td>
-                    <td>http://www.timconway.com</td>
+                    <td>Maroje</td>
+                    <td>Zgorov</td>
+                    <td>4.12</td>
+                    <td>300</td>
+                    <td>352</td>
+                    <td>Šibenik</td>
                 </tr>
             </tbody>
         </table>
@@ -91,7 +98,8 @@
                 dateFormat: "dd/MM/yy",
                 changeMonth: true,
                 changeYear: true,
-                yearRange: "-60:+0"
+                minDate: "dateToday",
+                yearRange: "-0:+1"
             });
 
         });
