popravljen algoritam za pretraživanje slobodnih instrukcija

--- a/ppij_web_aplikacija/Views/Instrukcije/Instrukcija.cshtml
+++ b/ppij_web_aplikacija/Views/Instrukcije/Instrukcija.cshtml
@@ -38,38 +38,17 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>Ilija</td>
-                    <td>Hromski</td>
-                    <td>3.47</td>
-                    <td>200</td>
-                    <td>7</td>
-                    <td>Zagreb</td>
-                </tr>
-                <tr>
-                    <td>Habib</td>
-                    <td>Seljdžić</td>
-                    <td>1.31</td>
-                    <td>100</td>
-                    <td>3</td>
-                    <td>Turkmenistan</td>
-                </tr>
-                <tr>
-                    <td>Miroslav</td>
-                    <td>Glavić</td>
-                    <td>4.26</td>
-                    <td>200</td>
-                    <td>144</td>
-                    <td>Krapina</td>
-                </tr>
-                <tr>
-                    <td>Maroje</td>
-                    <td>Zgorov</td>
-                    <td>4.12</td>
-                    <td>300</td>
-                    <td>352</td>
-                    <td>Šibenik</td>
-                </tr>
+                @foreach (var opis in Model.Opisi)
+                {
+                    <tr>
+                        <td>opis.Instruktor.Ime</td>
+                        <td>opis.Instruktor.Prezime</td>
+                        <td>opis.Ocjena</td>
+                        <td>opis.Cijena</td>
+                        <td>opis.BrojInstrukcija</td>
+                        <td>Ovdje ide combo box lokacija</td>
+                    </tr>}
+
             </tbody>
         </table>
         <hr />
