Dodana karta za definiranje mjesta održavanja instrukcija
Leaflet.js karta, mapquest tiles, interaktivna

--- a/ppij_web_aplikacija/Content/bootstrap.css
+++ b/ppij_web_aplikacija/Content/bootstrap.css
@@ -285,7 +285,18 @@ content: "\2713";
 }
 
 /***********************************************************************/
+#mapid {
+     height: 300px; 
+    width: 400px;
+}
 
+.mapsize{
+    height: 300px;
+    width: 400px;
+}
+
+
+/*******************************/
 .header-fixed {
     width: 100%;
     
