--- a/ppij_web_aplikacija/Views/Profil/Index.cshtml
+++ b/ppij_web_aplikacija/Views/Profil/Index.cshtml
@@ -4,6 +4,8 @@
     <head>
         <title>@ViewBag.Title</title>
         <script type ="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+        <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
     </head>
     <body>
         <div class="container" style="height:1500px;">
@@ -15,7 +17,7 @@
                     <!--Popis tabova-->
                     <li role="presentation" class="active"><a href="#tab1" aria-controls="tab1" role="tab" data-toggle="tab" id="dogovoreneinstrukcije">Moje dogovorene instrukcije</a></li>
                     <li role="presentation"><a href="#tab2" aria-controls="tab2" role="tab" data-toggle="tab">Nudim instrukcije</a></li>
-                    <li role="presentation"><a href="#tab3" aria-controls="tab3" role="tab" data-toggle="tab">Postavke profila</a></li>
+                    <li role="presentation"><a href="#tab3" aria-controls="tab3" role="tab" data-toggle="tab" onclick="setTimeout(refreshmap, 250)">Postavke profila</a></li>
                     <li role="presentation"><a href="#tab4" aria-controls="tab4" role="tab" data-toggle="tab">Promjena lozinke</a></li>
                 </ul>
 
@@ -50,7 +52,7 @@
                                 }
                             },
                             complete: function () {
-                                setTimeout(worker, 5000);
+                                setTimeout(nots, 5000);
                             }
                         });
                     }
@@ -518,10 +520,23 @@
                                             @Html.CheckBoxFor(model => model.ostalePostavke.instruktor)
                                         </div>
                                     </div>
+                                    @Html.HiddenFor(model => model.mojeVlastiteInstrukcije.MojeLokacijeJson, new { id = "jsonlokacije" })
+                                    <div class="row">
+                                        <div class="col-md-5">
+                                            <h4>Uredi lokacije</h4>
+                                            <div id="mapid"></div>
+                                        </div>
+                                        <div class="col-md-4" style="height:320px; overflow-y:auto;">
+                                            <h4>Uredi opis lokacija</h4>
+                                            <ul id="popislokacija">
 
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    
                                     <div class="row">
                                         <div class="col-md-2 mali-razmak-gore">
-                                            <input onclick="dodajindex(3);" type="submit" class="btn btn-default" value="Promjeni &raquo;" /> <br />
+                                            <input onclick="dodajlokacijeumodel(3);" type="submit" class="btn btn-default" value="Promjeni &raquo;" /> <br />
                                         </div>
                                     </div>
                                     @Html.HiddenFor(model => model.trenutniTab, new { id = "trenutniTab3"})
@@ -639,8 +654,111 @@
 
                 </div>
 
+                <script id="mapscript">
+                        var maxIdkarte = 0;
 
-                <script>
+                        function makeStruct(names) {
+                            var names = names.split(' ');
+                            var count = names.length;
+                            function constructor() {
+                                for (var i = 0; i < count; i++) {
+                                    this[names[i]] = arguments[i];
+                                }
+                            }
+                            return constructor;
+                        }
+                    
+                        var idmarkerKarta = makeStruct("id marker");
+                        var popismarkeranakarti = [];
+
+
+                        var mymap = L.map('mapid').setView([45.049222, 16.280702], 6);
+                        L.tileLayer('http://{s}.mqcdn.com/tiles/1.0.0/map/{z}/{x}/{y}.png', {
+                            attribution: '&copy; <a href="http://osm.org/copyright" title="OpenStreetMap" target="_blank">OpenStreetMap</a> contributors | Tiles Courtesy of <a href="http://www.mapquest.com/" title="MapQuest" target="_blank">MapQuest</a> <img src="http://developer.mapquest.com/content/osm/mq_logo.png" width="16" height="16">',
+                            subdomains: ['otile1','otile2','otile3','otile4']
+                        }).addTo(mymap);
+                        mymap.addEventListener("click", kartaClick);
+
+                        function refreshmap(){
+                            mymap.invalidateSize();
+                        }
+
+                        function kartaClick(e){
+                            maxIdkarte += 1;
+                            marker = L.marker([e.latlng.lat, e.latlng.lng], {title: "Lokacija šif. "+maxIdkarte} ).bindPopup("<p>Nedefinirano</p></br><input type='button' value='Ukloni lokaciju' class='marker-delete-button'/>");
+                            marker.on("popupopen", onPopupOpen);
+                            popismarkeranakarti.push(new idmarkerKarta(maxIdkarte, marker));
+                            var mcontent = marker.getPopup().getContent();
+                            mcontent = mcontent.substr(3);
+                            mcontent = mcontent.substr(0, mcontent.indexOf("<"));
+                            document.getElementById("popislokacija").innerHTML += '<li id="lilok'+maxIdkarte+'"><label id="labellok'+maxIdkarte+'" for="opislok'
+                                            +maxIdkarte+'">Opis lokacije šif. '+maxIdkarte
+                                                +' : </label><input type="text" id="opislok' +maxIdkarte+ '" value="'+mcontent+'">' + '</input></li>';
+                            var broj = maxIdkarte;
+                            $("#opislok" +broj).on("change", function (){
+                                for(var j = 0; j<popismarkeranakarti.length;j++){
+                                    if(popismarkeranakarti[j].id == broj){
+                                        popismarkeranakarti[j].marker.getPopup().setContent('<p>'+$("#opislok" +broj).val()+'</p></br><input type="button" value="Ukloni lokaciju" class="marker-delete-button"/>');
+                                        var setopis = '<label id="labellok'+broj+'" for="opislok'+broj+'">Opis lokacije šif. '+broj+' : </label><input type="text" id="opislok' +broj+ '" value="'+$("#opislok" +broj).val()+'">' + '</input>';
+                                        var li = document.getElementById("lilok"+broj).innerHTML = setopis;
+                                        break;
+                                    }
+                                }
+                            });
+                            marker.addTo(mymap);
+                        }
+
+                        function onPopupOpen() {
+                            var tempMarker = this;
+                            $(".marker-delete-button:visible").on("click", function () {
+                                for(var i = 0; i<popismarkeranakarti.length;i++){
+                                    if(popismarkeranakarti[i].marker == tempMarker){
+                                        var element = document.getElementById("lilok"+popismarkeranakarti[i].id);
+                                        element.parentElement.removeChild(element);
+                                        popismarkeranakarti.splice(i, 1);
+                                        break;
+                                    }
+                                }
+                                mymap.removeLayer(tempMarker);
+                            });
+                        }
+
+                        function dodajlokacijeumodel(id){
+                            dodajindex(id);
+                            //var lok = makeStruct("lat lon opis id");
+                            var listamarkera1 = makeStruct("lokacije");
+                            listamarkera1.lokacije = [];
+                            for (var i=0;i<popismarkeranakarti.length;i++){
+                                var mcontent = popismarkeranakarti[i].marker.getPopup().getContent();
+                                mcontent = mcontent.substr(3);
+                                mcontent = mcontent.substr(0, mcontent.indexOf("<"));
+                                listamarkera1.lokacije.push({lat: popismarkeranakarti[i].marker._latlng.lat, lon: popismarkeranakarti[i].marker._latlng.lng, opis: mcontent, id: popismarkeranakarti[i].id});
+                            }
+                            $("#jsonlokacije").val(JSON.stringify(listamarkera1.lokacije));
+
+                        }
+
+                        function mojelokacijeInit(){
+                            var listamarkera = @Html.Raw(Json.Encode(Model.mojeVlastiteInstrukcije.MojeLokacijeJson));
+                            listamarkera = JSON.parse(listamarkera );
+                            for(var i = 0; i < listamarkera.lokacije.length; i++ ){
+                                if(listamarkera.lokacije[i].id > maxIdkarte){
+                                    maxIdkarte = listamarkera.lokacije[i].id;
+                                }
+                                marker = L.marker([listamarkera.lokacije[i].lat, listamarkera.lokacije[i].lon], {title: "Lokacija šif. " + listamarkera.lokacije[i].id} ).bindPopup("<p>" + listamarkera.lokacije[i].opis + "</p></br><input type='button' value='Ukloni lokaciju' class='marker-delete-button'/>");
+                                marker.on("popupopen", onPopupOpen);
+                                document.getElementById("popislokacija").innerHTML += '<li id="lilok'+listamarkera.lokacije[i].id+'"><label id="labellok'+listamarkera.lokacije[i].id+'" for="opislok'+listamarkera.lokacije[i].id+'">Opis lokacije šif. '+listamarkera.lokacije[i].id+' : </label><input type="text" id="opislok' +listamarkera.lokacije[i].id+ '" value="'+listamarkera.lokacije[i].opis +'">' + '</input></li>';
+                                
+                                popismarkeranakarti.push(new idmarkerKarta(listamarkera.lokacije[i].id, marker));
+                                marker.addTo(mymap);
+                            }
+                        }
+
+                </script>
+
+
+
+                <script >
                     //odabrani termini za model
                     var dodanitermini;
                     var dogovorenitermini;
@@ -713,6 +831,8 @@
                         //document.getElementById("test123").innerHTML = dodanitermini;
                         oznaciTermine();
                         nots();
+                        mojelokacijeInit();
+                        setTimeout(refreshmap, 250);
                     });
 
                     //pocetni tab
@@ -740,7 +860,7 @@
                             activaTab('tab' + id);
                         }
                     });
-                    
+
 
                     //interakcija sa tablicom termina
                     function changeText(id) {
@@ -779,6 +899,9 @@
 
 
                 </script>
+
+
+
 
 
             </div>
