--- a/ppij_web_aplikacija/Views/Instrukcije/Instrukcija.cshtml
+++ b/ppij_web_aplikacija/Views/Instrukcije/Instrukcija.cshtml
@@ -8,7 +8,7 @@
 <body>
     <h3>Biranje instrukcije</h3>
     <hr />
-    @using (Html.BeginRouteForm("Instrukcije"))
+    @using (Html.BeginForm())
     {
         <div class="form-group">
             @Html.LabelFor(model => model.Datum)
@@ -22,8 +22,8 @@
             @Html.LabelFor(m => m.OdabranoTrajanjeID)
             @Html.DropDownListFor(m => Model.OdabranoTrajanjeID, Model.Trajanja)
         </div>
-        <input type="submit" value="Traži" />
-    }
+        <input type="submit" name="naredba" value="Traži">
+
     <hr />
     <table id="instrukcije" class="tablesorter">
         <thead>
@@ -54,8 +54,8 @@
                     else if (opis.Status == "SLOBODAN")
                     {
                         <td>
-                            @Html.Hidden("ID_instruktor", opis.Instruktor.ID_osoba)
-                            <input type="submit" value="Pošalji zahtjev" />  
+                            <button type="submit" name="naredba" 
+                                    value=@(opis.Instruktor.ID_osoba)>Pošalji zahtjev</button>
                         </td>
                     }
                     else if (opis.Status == "NEDOSTUPAN")
@@ -82,6 +82,7 @@
             @Html.TextBoxFor(m => Model.Prezime)
         </div>
     </div>
+    }
 </body>
 </html>
 
